welcome.lessons.welcome.loopdowhile.Poucet1.scala.error
Poucet:14: error: not found: value sortieTrouv?e
} while (!sortieTrouv?e())
          ^